hphp/hack/test/typecheck/references/call_time_reference3.php.exp
File "call_time_reference3.php", line 4, characters 9-11:
References are only permitted in function calls. (Typing[4299])
